--- a/Pages/SLDS_Datepicker_Example2.html
+++ b/Pages/SLDS_Datepicker_Example2.html
@@ -10,7 +10,7 @@
         <head>
             <meta name="viewport" content="width=device-width, initial-scale=1"/>
             <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-            <!-- Include Lighting design System CSS -->
+            <!-- Include Lightning design System CSS -->
             <link href="{!URLFOR($Resource.LightningDesignSystem,'assets/styles/salesforce-lightning-design-system-vf.min.css')}" rel="stylesheet" />
 
             <!-- Additional Style for page container -->
